--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -22,7 +22,7 @@ header {
 
 .container {
 	max-width: 750px;
-	margin: 10px auto;
+	margin: 30px auto;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -42,7 +42,7 @@ header {
       width: 100%;
     }
 
-    &.description {
+    .description {
       text-align: center;
       padding-top: 10px;
 
@@ -58,14 +58,3 @@ header {
       }
     }
 }
-
-
-
-
-
-// select {
-// 	position: absolute;
-// 	top: 10px;
-// 	left: 10px;
-// 	padding: 5px;
-// }
